--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -34,12 +34,12 @@
             </span>
             <p class="theme-text"><span class="math display">$$\overline{k} = \frac{\lambda}{\mu} = p$$</span></p>
             <span class="theme-text">среднее число заявок в очереди</span>
-            <p class="theme-text"><span class="math display">$$L_{оч.} = \frac{p^{n+1} p_{0}}{n * n!(1-\frac{p}{n})^{2}}$$</span></p>
+            <p class="theme-text"><span class="math display">$$L_{сист.} = L_{оч.} + p$$</span></p>
             <span class="theme-text">
                 среднее число заявок в системе
             </span>
             <span class="theme-text" style="align-self: center">
-                Lсист=Lоч+ρ,
+            <p class="theme-text"><span class="math display">$$L_{оч.} = \frac{p^{n+1} p_{0}}{n * n!(1-\frac{p}{n})^{2}}$$</span></p>
             </span>
             <span class="theme-text">
                 Среднее время пребывания заявки в очереди и среднее время пребывания заявки в системе, как и ранее, находятся по формулам Литтла.
