--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="work-area">
-        <p class="theme-subtitle">МСМО с неограниченными очередями</p>
+        <p class="theme-subtitle">СМО с неограниченными очередями</p>
         <p class="theme-title">Теория</p>
         <div class="theory">
             <span class="theme-text">
