--- a/resurse/template/header.j2
+++ b/resurse/template/header.j2
@@ -9,10 +9,10 @@
             <p>ЗАДАЧИ</p>
             <div class="dropdown">
                 <div class="header-button">
-                    <a href="/cfr-unlimited">МСМО с неограниченной очередью</a>
+                    <a href="/cfr-unlimited">СМО с неограниченной очередью</a>
                 </div>
                 <div class="header-button">
-                    <a href="/cfr-refusal">МСМО с отказами</a>
+                    <a href="/cfr-refusal">СМО с отказами</a>
                 </div>
                 <div class="header-button">
                     <a href="/block-system">Оценка надежности системы</a>
