--- a/resurse/template/sjkfds.html
+++ b/resurse/template/sjkfds.html
@@ -1,4 +1,14 @@
-<div class="calc-area">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/style/layout.css">
+    <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <title>Document</title>
+</head>
+<body>
+    <div class="calc-area">
         <div class="skip-parts">
             <div class="skip-button">
                 <p class="theme-title">ТЕОРИЯ</p>
@@ -111,3 +121,5 @@
             </div>
         </div>
     </div>
+</body>
+</html>
