Добавил кнопки экспорта в файл на каждую страницу

--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -74,5 +74,9 @@
         <div class="solve-area">
 
         </div>
+        <div>
+            <button class="header-button">Сохранить решение в PDF</button>
+            <button class="header-button">Сохранить решение в Excel</button>
+        </div>
     </div>
 </div>
