--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -99,5 +99,9 @@
         <div class="solve-area">
 
         </div>
+        <div>
+            <button class="header-button">Сохранить решение в PDF</button>
+            <button class="header-button">Сохранить решение в Excel</button>
+        </div>
     </div>
 </div>
