Добавил подсказки в поля ввода во втором задании

--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -75,23 +75,23 @@
         <div class="input-form">
             <div class="input-column">
                 <p class="form-text">Интенсивность пуассоновского потока</p>
-                <input class="form-input" type="text" id="intensityInput">
+                <input class="form-input" type="text" id="intensityInput" placeholder="Введите значение">
             </div>
             <div class="input-column">
                 <p class="form-text">Время обслуживания</p>
-                <input class="form-input" type="text" id="serviceTimeInput">
+                <input class="form-input" type="text" id="serviceTimeInput" placeholder="Введите значение">
             </div>
             <div class="input-column">
                 <p class="form-text">Продолжительность симуляции</p>
-                <input class="form-input" type="text" id="simulationDurationInput">
+                <input class="form-input" type="text" id="simulationDurationInput" placeholder="Введите значение">
             </div>
             <div class="input-column">
                 <p class="form-text">Количество каналов обслуживания</p>
-                <input class="form-input" type="text" id="channelCountInput">
+                <input class="form-input" type="text" id="channelCountInput" placeholder="Введите значение">
             </div>
             <div class="input-column">
                 <p class="form-text">Количество запусков симуляции</p>
-                <input class="form-input" type="text" id="simulationCountInput">
+                <input class="form-input" type="text" id="simulationCountInput" placeholder="Введите значение">
             </div>
             <button class="solve-button" onclick="refusalSolve()">РЕШИТЬ</button>
         </div>
