--- a/resurse/template/block_system_page.j2
+++ b/resurse/template/block_system_page.j2
@@ -72,29 +72,21 @@
             <p class="theme-title" id="formTitle">Ввод параметров</p>
             <div class="input-form" style="height: 800px; color: #FFFFFF; align-items: center;">
                 <div class="block-system">
-                <p>Введите параметры системы</p>
+                <p class="theme-text">Введите параметры системы</p>
                 <div class="element-system">
-                    <p>Введите вероятность</p>
+                    <p>Введите вероятность элемента</p>
                     <div class="element-form">
-                        <input class="form-input" type="number" placeholder="Pq элемента">
+                        <input class="form-input" type="text" id="probabilityInput" placeholder="Pq элемента">
                         <button class="percent-button">%</button>
                     </div>
-                    <div class="element-form">
-                        <button class="plus-button">
-                          <span>Добавить элемент</span>
-                        </button>
-                      </div>
+                    <button class="add-button">Добавить элемент</button>
                     <p>Выберите подключение</p>
                     <select class="select">
                         <option value="parallel">Паралелльное</option>
                         <option value="serial">Последовательное</option>
                     </select>
                 </div>
-                <div class="element-form">
-                    <button class="plus-button">
-                        <span>Добавить блок</span>
-                    </button>
-                </div>
+                <button class="add-button">Добавить блок</button>
                 <p>Выберите подключение</p>
                     <select class="select">
                         <option value="parallel">Паралелльное</option>
@@ -103,13 +95,52 @@
                 </div>
                 <p class="theme-text">Промежуточные данные</p>
                 <span>-+-+-+-+</span>
-                <button class="solve-button">РЕШИТЬ</button>
+                <button class="solve-button" onclick="blockSystemSolve()">РЕШИТЬ</button>
             </div>
             <p class="theme-title" id="resultTitle">Решение</p>
             <div class="solve-area">
-    
+                <table class="table" border="1" style="text-align: center;"> 
+                    <tr> 
+                        <th rowspan="2">Номер испытания</th> 
+                        <th colspan="5">Случайные числа моделирующие элементы</th> 
+                        <th colspan="5">Элементы</th> 
+                        <th rowspan="2">Блок</th> 
+                    </tr> 
+                    <tr> 
+                        <th>A1</th> 
+                        <th>A2</th> 
+                        <th>...</th> 
+                        <th>A(N-1)</th> 
+                        <th>A(N)</th> 
+                        <th>A1</th> 
+                        <th>A2</th> 
+                        <th>...</th> 
+                        <th>A(N-1)</th> 
+                        <th>A(N)</th> 
+                    </tr> 
+                </table> 
+                <button onclick="showTrials()">Показать 3 испытания</button>
+                <script>
+                    function showTrials() {
+                        let trials = [
+                            ["1", "1", "0.4", "...", "0.28", "1", "0", "1", "...", "1", "0", "0"],
+                            ["2", "0.97", "0.9", "...", "0.16", "0.76", "1", "1", "...", "1", "1", "0"],
+                            ["3", "0.18", "0.21", "...", "0.06", "0", "0", "1", "...", "0", "1", "1"]
+                        ];
+
+                        let table = document.querySelector("table");
+
+                        for (let i = 0; i < trials.length; i++) {
+                            let row = table.insertRow(-1);
+                            for (let j = 0; j < trials[i].length; j++) {
+                                let cell = row.insertCell(j);
+                                cell.innerHTML = trials[i][j];
+                            }
+                        }
+                    }
+                </script>
             </div>
-            <div>
+            <div style="margin-top: 90px;">
                 <button class="header-button">Сохранить решение в PDF</button>
                 <button class="header-button">Сохранить решение в Excel</button>
             </div>
