Добавил таблицу во второе задание. Обновил стиль таблиц

--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -435,3 +435,15 @@ body{
 .add-button:active{
     background-color: rgba(180, 191, 202, 0.5);
 }
+
+.t-table{
+    margin-top: 20px;
+    width: 900px;
+    overflow: scroll;
+    color: rgb(14, 37, 64);
+}
+
+.t-table th{
+    width: 60px;
+    height: 40px;
+}
