--- a/resurse/template/block_system_page.j2
+++ b/resurse/template/block_system_page.j2
@@ -99,7 +99,7 @@
             </div>
             <p class="theme-title" id="resultTitle">Решение</p>
             <div class="solve-area">
-                <table class="table" border="1" style="text-align: center;"> 
+                <table class="t-table" border="1" style="text-align: center;"> 
                     <tr> 
                         <th rowspan="2">Номер испытания</th> 
                         <th colspan="5">Случайные числа моделирующие элементы</th> 
