--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -96,10 +96,21 @@
             <button class="solve-button" onclick="refusalSolve()">РЕШИТЬ</button>
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
-        <div class="solve-area">
-
-        </div>
-        <div>
+            <table class="t-table" border="1" style="text-align: center;"> 
+                    <tr> 
+                        <th>Индекс</th> 
+                        <th>Случайное число</th> 
+                        <th>МЕЖ</th> 
+                        <th>Время в очереди</th>
+                        <th>Сервер 1</th> 
+                        <th>Сервер 2</th>
+                        <th>Сервер 3</th>
+                        <th>Обслужено</th>
+                        <th>Отказов</th>
+                    </tr> 
+                    
+                </table> 
+        <div style="margin-top: 90px;">
             <button class="header-button">Сохранить решение в PDF</button>
             <button class="header-button">Сохранить решение в Excel</button>
         </div>
