Сделал генерацию таблиц 1 и 2 задания

--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -71,10 +71,7 @@
             <button class="solve-button" onclick="unlimitedSolve()">РЕШИТЬ</button>
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
-        <div class="solve-area">
-
-        </div>
-        <div>
+        <div style="margin-top: 90px;">
             <button class="header-button">Сохранить решение в PDF</button>
             <button class="header-button">Сохранить решение в Excel</button>
         </div>
