Переделал скролл до результата и добавил скролл в кнопку Решить для заданий 1 и 2

--- a/resurse/template/block_system_page.j2
+++ b/resurse/template/block_system_page.j2
@@ -140,7 +140,7 @@
                     }
                 </script>
             </div>
-            <div style="margin-top: 90px;">
+            <div id="saveContainer">
                 <button class="header-button">Сохранить решение в PDF</button>
                 <button class="header-button">Сохранить решение в Excel</button>
             </div>
