--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -96,7 +96,7 @@
             <button class="solve-button" onclick="refusalSolve()">РЕШИТЬ</button>
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
-        <div style="margin-top: 15px;">
+        <div id="saveContainer">
             <button class="header-button">Сохранить решение в PDF</button>
             <button class="header-button">Сохранить решение в Excel</button>
         </div>
