--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -71,7 +71,7 @@
             <button class="solve-button" onclick="unlimitedSolve()">РЕШИТЬ</button>
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
-        <div style="margin-top: 90px;">
+        <div id="saveContainer">
             <button class="header-button">Сохранить решение в PDF</button>
             <button class="header-button">Сохранить решение в Excel</button>
         </div>
