--- a/resurse/template/layout.j2
+++ b/resurse/template/layout.j2
@@ -7,7 +7,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="static\style\layout.css">
+        
         <script src="static\scripts\script.js"></script>
+        <script src="static\scripts\block_system_page.js"></script>
+
         <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
         <title>{{ title }}</title>
     </head>
