--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -1,6 +1,6 @@
 /* -------------------------------------- */
 
-body{
+/* body{
     font-family: 'Ubuntu Sans', sans-serif;
     color: #FFFFFF;
     display: flex;
@@ -417,7 +417,7 @@ body{
 .t-table th{
     width: 60px;
     height: 40px;
-}
+} */
 
 /* -------------------------------------- */
 
