--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -425,19 +425,26 @@
 
 
 .system-block {
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     max-width: 400px;
-    background: black;
-    border-radius: 25px;
+    background: rgba(3, 23, 44, 0.75);
+    border-radius: 10px;
     padding: 20px;
     box-sizing: border-box;
     margin: 0 auto;
   }
 
   .block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
-    background: wheat;
-    border-radius: 25px;
+    background: rgba(3, 23, 44, 0.75);
+    border-radius: 10px;
     padding: 20px;
     box-sizing: border-box;
     margin-bottom: 15px;
@@ -454,7 +461,6 @@
     display: flex;
     align-items: center;
     width: 100%;
-    background: black;
     border-radius: 25px;
     padding: 10px;
     box-sizing: border-box;
@@ -463,13 +469,14 @@
   }
 
   .button-with-icon {
+    width: 270px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     padding: 10px 20px;
     font-size: 16px;
     color: white;
-    background-color: #007bff;
+    background-color: rgb(20, 47, 75);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -482,7 +489,7 @@
   }
 
   .button-with-icon:hover {
-    background-color: #0056b3;
+    background-color: rgba(16, 52, 91, 0.75);
   }
 
   .calculate-button {
@@ -492,7 +499,7 @@
     padding: 10px 20px;
     font-size: 16px;
     color: white;
-    background-color: red;
+    background-color: rgb(20, 47, 75);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -505,7 +512,7 @@
   }
 
   .calculate-button:hover {
-    background-color: darkred;
+    background-color: rgba(16, 52, 91, 0.75);
   }
 
   .text {
@@ -513,7 +520,7 @@
   }
 
   .delete-button {
-    background: red;
+    background: rgb(164, 21, 21);
     color: white;
     border: none;
     border-radius: 5px;
@@ -523,7 +530,7 @@
   }
 
   .delete-button:hover {
-    background: darkred;
+    background: red;
   }
 
   .input-container {
@@ -555,7 +562,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    background: darkred;
+    background: rgb(164, 21, 21);
     color: white;
     border: none;
     border-radius: 5px;
@@ -575,7 +582,7 @@
 
   .checkbox-container label {
     margin-right: 10px;
-    color: black;
+    color: #FFFFFF;
   }
 
   .checkbox-container-white {
@@ -600,3 +607,15 @@
     justify-content: center;
     margin-top: 20px;
   }
+
+  body{
+    font-family: 'Ubuntu Sans', sans-serif;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+  
+
+  
