--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -93,7 +93,9 @@
                 <p class="form-text">Количество запусков симуляции</p>
                 <input class="form-input" type="text" id="simulationCountInput" placeholder="Введите значение">
             </div>
-            <button class="solve-button" onclick="refusalSolve()">РЕШИТЬ</button>
+            <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                <button class="solve-button" onclick="refusalSolve()">РЕШИТЬ</button>
+            </div>
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
         <div id="saveContainer">
