--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -333,89 +333,6 @@ body{
     font-size: 12px;
 }
 
-.solve-button{
-    align-self: center;
-}
-
-.block-system{
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-    align-items: center;
-    width: 400px;
-    height: 550px;
-    border-radius: 10px;
-    background-color: rgba(37, 52, 67, 0.75);
-}
-
-.element-system{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 300px;
-    border-radius: 15px;
-    background-color: rgba(24, 36, 49, 0.75);
-}
-
-.element-form{
-    width: 170px;
-    margin: 5px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 10px
-}
-
-.percent-button{
-    width: 60px;
-    height: 30px;
-    font-weight: 700;
-    font-size: 15px;
-    background-color: rgba(97, 128, 163, 0.3);
-    border: none;
-    color:#FFFFFF;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.percent-button:hover{
-    background-color: rgba(180, 191, 202, 0.75);
-}
-
-.percent-button:active{
-    background-color: rgba(180, 191, 202, 0.5);
-}
-
-.select{
-    width: 170px;
-    height: 40px;
-    font-size: 15px;
-    background-color: rgba(97, 128, 163, 0.3);
-    border: none;
-    color:#FFFFFF;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.select:hover{
-    background-color: rgba(180, 191, 202, 0.75);
-}
-
-.select:active{
-    background-color: rgba(180, 191, 202, 0.5);
-}
-
-.select option{
-    font-size: 15px;
-    background-color: rgb(9, 25, 44);
-    border: none;
-    color:#FFFFFF;
-    cursor: pointer;
-}
-
 .add-button{
     margin-top: 20px;
     width: 170px;
@@ -444,6 +361,193 @@ body{
 }
 
 .t-table th{
-    width: 80px;
+    width: 60px;
     height: 40px;
 }
+
+.system-block {
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 400px;
+    background: rgba(3, 23, 44, 0.75);
+    border-radius: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    margin: 0 auto;
+  }
+
+  .block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background: rgba(3, 23, 44, 0.75);
+    border-radius: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+    position: relative;
+  }
+
+  .block-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .element {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    border-radius: 25px;
+    padding: 10px;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+    position: relative;
+  }
+
+  .button-with-icon {
+    width: 270px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: rgb(20, 47, 75);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-bottom: 15px;
+  }
+
+  .button-with-icon .icon {
+    margin-right: 8px;
+  }
+
+  .button-with-icon:hover {
+    background-color: rgba(16, 52, 91, 0.75);
+  }
+
+  .calculate-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: rgb(20, 47, 75);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-bottom: 15px;
+  }
+
+  .calculate-button .icon {
+    margin-right: 8px;
+  }
+
+  .calculate-button:hover {
+    background-color: rgba(16, 52, 91, 0.75);
+  }
+
+  .text {
+    color: white;
+  }
+
+  .delete-button {
+    background: rgb(164, 21, 21);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-left: 10px;
+  }
+
+  .delete-button:hover {
+    background: red;
+  }
+
+  .input-container {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    position: relative;
+  }
+
+  .input-field {
+    flex-grow: 1;
+    padding: 5px;
+    padding-right: 20px; /* Space for % sign */
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+
+  .input-container::after {
+    content: '%';
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #333;
+  }
+
+  .delete-block-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: rgb(164, 21, 21);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+
+  .delete-block-button:hover {
+    background: red;
+  }
+
+  .checkbox-container {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+  }
+
+  .checkbox-container label {
+    margin-right: 10px;
+    color: #FFFFFF;
+  }
+
+  .checkbox-container-white {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+  }
+
+  .checkbox-container-white label {
+    margin-right: 10px;
+    color: white;
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+  }
+
+  .calculate-button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+ 
+  
