--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -68,7 +68,9 @@
                 <p class="form-text">Количество итераций</p>
                 <input class="form-input" id="iterationCountInput" type="text" placeholder="Введите значение">
             </div>
-            <button class="solve-button" onclick="unlimitedSolve()">РЕШИТЬ</button>
+            <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; align-self: center;">
+                <button class="solve-button" onclick="refusalSolve()">РЕШИТЬ</button>
+            </div>
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
         <div id="saveContainer">
