--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -93,24 +93,12 @@
                 <p class="form-text">Количество запусков симуляции</p>
                 <input class="form-input" type="text" id="simulationCountInput" placeholder="Введите значение">
             </div>
-            <button class="solve-button" onclick="refusalSolve()">РЕШИТЬ</button>
+            <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                <button class="solve-button" onclick="refusalSolve()">РЕШИТЬ</button>
+            </div>
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
-            <table class="t-table" border="1" style="text-align: center;"> 
-                    <tr> 
-                        <th>Индекс</th> 
-                        <th>Случайное число</th> 
-                        <th>МЕЖ</th> 
-                        <th>Время в очереди</th>
-                        <th>Сервер 1</th> 
-                        <th>Сервер 2</th>
-                        <th>Сервер 3</th>
-                        <th>Обслужено</th>
-                        <th>Отказов</th>
-                    </tr> 
-                    
-                </table> 
-        <div style="margin-top: 90px;">
+        <div id="saveContainer">
             <button class="header-button">Сохранить решение в PDF</button>
             <button class="header-button">Сохранить решение в Excel</button>
         </div>
