Осуществление вывода на экран решения

--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
 <div class="calc-area">
     <div class="skip-parts">
             <button class="skip-button" id="theoryBtn" onclick="goToTheory()">
@@ -99,8 +101,9 @@
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
         <div id="saveContainer">
-            <button class="header-button">Сохранить решение в PDF</button>
+            <button class="header-button" id="savePDFButton">Сохранить решение в PDF</button>
             <button class="header-button">Сохранить решение в Excel</button>
         </div>
+        <div id="resultTableContainer"></div>
     </div>
 </div>
