Реализовал сохранение в PDF

--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -72,7 +72,7 @@
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
         <div id="saveContainer">
-            <button class="header-button">Сохранить решение в PDF</button>
+            <button class="header-button" onclick="saveTablesToPDF()">Сохранить решение в PDF</button>
             <button class="header-button">Сохранить решение в Excel</button>
         </div>
     </div>
