--- a/resurse/template/layout.j2
+++ b/resurse/template/layout.j2
@@ -10,6 +10,8 @@
         <script src="static\scripts\block_system_page.js"></script>
         <script src="static\scripts\script.js"></script>
         <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js"></script>
         <title>{{ title }}</title>
     </head>
 
