--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -100,8 +100,8 @@
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
         <div id="saveContainer">
-            <button class="header-button" onclick="downloadPDF()">Сохранить решение в PDF</button>
-            <button class="header-button">Сохранить решение в Excel</button>
+            <button id="saveTxtButton" class="header-button">Сохранить решение в TXT</button>
+            <button id="saveExcelButton" class="header-button">Сохранить решение в Excel</button>
         </div>
         <div id="resultTableContainer"></div>
     </div>
