--- a/resurse/template/block_system_page1.html
+++ b/resurse/template/block_system_page1.html
@@ -1,47 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet"
-      href="static\style\layout.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet"
+    href="static\style\layout.css">
 
-    <script
-      src="static\scripts\script.js"></script>
-    <script
-      src="static\scripts\block_system_page.js"></script>
+  <script
+    src="static\scripts\script.js"></script>
+  <script
+    src="static\scripts\block_system_page.js"></script>
 
-    <script type="text/javascript" async
-      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+  <script type="text/javascript" async
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
-  </head>
-  <body>
-    <div>
-      <div class="system-block">
-        <div class="button-container">
-          <button class="button-with-icon" id="add-block-button"
-            onclick="addBlock()">
-            <span class="icon"><i class="fas fa-plus"></i></span>
-            Добавить новый блок
-          </button>
-        </div>
-        <div class="checkbox-container-white">
-          <label><input type="radio" name="system-mode" class="mode-radio">
-            Параллельно</label>
-          <label><input type="radio" name="system-mode" class="mode-radio"
-              checked> Последовательно</label>
-        </div>
-        <div class="calculate-button-container">
-          <button class="calculate-button" id="CalculateButton"
-            onclick="calculateData()">
-            <span class="icon"><i class="fas fa-calculator"></i></span>
-            Вычислить
-          </button>
-        </div>
+  
+    <style>
+      table {
+        border-collapse: collapse;
+        width: 100%;
+        color: #000;
+      }
+      th, td {
+        border: 1px solid black;
+        padding: 8px;
+        text-align: center;
+      }
+      .text-container {
+        display: flex;
+        color: #000;
+      }
+    </style>
+
+</head>
+<body>
+  <div>
+    <div class="system-block">
+      <div class="button-container">
+        <button class="button-with-icon" id="add-block-button"
+          onclick="addBlock()">
+          <span class="icon"><i class="fas fa-plus"></i></span>
+          Добавить новый блок
+        </button>
       </div>
+      <div class="checkbox-container-white">
+        <label><input type="radio" name="system-mode" class="mode-radio">
+          Параллельно</label>
+        <label><input type="radio" name="system-mode" class="mode-radio"
+            checked> Последовательно</label>
+      </div>
+      <div class="calculate-button-container">
+        <button class="calculate-button" id="CalculateButton"
+          onclick="fetchSystemReliability()">
+          <span class="icon"><i class="fas fa-calculator"></i></span>
+          Вычислить
+        </button>
+      </div>
+    </div>
+    <div id="Container-Table">
 
-    </body>
-  </html>
+
+
+    </div>
+
+  
+
+
+  </div>
+  </body>
+</html>
+
+
+
