--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -94,7 +94,7 @@
                 <p class="form-text">Количество запусков симуляции</p>
                 <input class="form-input" type="text" id="simulationCountInput" placeholder="Введите значение">
             </div>
-            <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+            <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; align-self: center;">
                 <button class="solve-button" onclick="refusalSolve()">РЕШИТЬ</button>
             </div>
         </div>
