--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -68,12 +68,13 @@
                 <p class="form-text">Количество итераций</p>
                 <input class="form-input" id="iterationCountInput" type="text" placeholder="Введите значение">
             </div>
-            <button class="solve-button" onclick="unlimitedSolve()">РЕШИТЬ</button>
+            <div style="display: flex; justify-content: center; align-items: center;">
+                <button class="solve-button" onclick="unlimitedSolve()">РЕШИТЬ</button>
+            </div>
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
         <div id="saveContainer">
             <button class="header-button" onclick="saveTablesToPDF()">Сохранить решение в PDF</button>
-            <button class="header-button">Сохранить решение в Excel</button>
         </div>
     </div>
 </div>
