--- a/resurse/template/layout.j2
+++ b/resurse/template/layout.j2
@@ -11,6 +11,24 @@
         <script src="static\scripts\script.js"></script>
         <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
         <title>{{ title }}</title>
+
+
+         <style>
+      table {
+        border-collapse: collapse;
+        width: 100%;
+        color: #000;
+      }
+      th, td {
+        border: 1px solid black;
+        padding: 8px;
+        text-align: center;
+      }
+      .text-container {
+        display: flex;
+        color: #000;
+      }
+    </style>
     </head>
 
     <body>
